--- a/lite/branches/firebug1.2/lite/firebug-lite.css
+++ b/lite/branches/firebug1.2/lite/firebug-lite.css
@@ -1,6 +1,6 @@
 /* */
 #Firebug div, #Firebug h3, #Firebug span, #Firebug input, #Firebug textarea, #Firebug select, #Firebug option, #Firebug a, #Firebug strong, #Firebug em, #Firebug label, #Firebug center { 
-	text-align:left; border:0; overflow:visible; background:none; color:#111; font-size:1em; font-weight:normal; font-style:normal; font-family:sans-serif; margin:0; padding:0;
+	float:none; width:auto; height:auto; text-align:left; border:0; overflow:visible; background:none; color:#111; font-size:1em; font-weight:normal; font-style:normal; font-family:sans-serif; margin:0; padding:0;
 }
 #Firebug input, #Firebug select, #Firebug textarea { background:#fff; font:11px Verdana, Geneva, Arial, Helvetica, sans-serif; border:1px outset #aaa; padding:2px }
 #Firebug center { text-align:center; }
