reorganize UI concept around 'packages'. Main menu from globals to contexts; these are organized by package not by window; each package has windows under it.
git-svn-id: http://fbug.googlecode.com/svn@1631 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
@@ -3,6 +3,14 @@
 @import "chrome://chromebug/skin/chromebug.css";
 @import "chrome://browser/skin/browser.css";
 
+
+#cbPackageList {
+    /* This triggers initialize() calls , see bindings.xml */
+    -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
+     font-weight: bold;
+     color: blue;
+}
+
 #cbGlobalScopeList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
@@ -39,14 +47,17 @@
      font-weight: bold;
      color: blue;
 }
-/*
-#cbCategoryList {
+
+#cbPathList {
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
      font-weight: bold;
      color: blue;
 }
-*/
+
 #cbDocumentLabel {
+    font-weight: bold;
+}
+#cbPackageLabel {
     font-weight: bold;
 }
 /*
