(incomplete) add file list menu
git-svn-id: http://fbug.googlecode.com/svn@1658 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
@@ -11,6 +11,14 @@
      color: blue;
 }
 
+#cbAllFilesList {
+    /* This triggers initialize() calls , see bindings.xml */
+    -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
+     font-weight: bold;
+     color: blue;
+}
+
+
 #cbGlobalScopeList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
