jsContexts one to one with chromebug objects
git-svn-id: http://fbug.googlecode.com/svn@1698 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
@@ -4,6 +4,14 @@
 @import "chrome://browser/skin/browser.css";
 
 
+#cbContextList {
+    /* This triggers initialize() calls , see bindings.xml */
+    -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
+     font-weight: bold;
+     color: blue;
+}
+
+
 #cbPackageList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
