add package based filtering
git-svn-id: http://fbug.googlecode.com/svn@1732 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug0.4/content/ChromeBug/chromebug.css
@@ -76,6 +76,9 @@
 #cbPackageLabel {
     font-weight: bold;
 }
+#cbContextLabel {
+    font-weight: bold;
+}
 /*
 .toolbarbutton-1, .toolbarbutton-menubutton-button {
     padding:5px;
