Proper style for test-result stack trace.
git-svn-id: http://fbug.googlecode.com/svn@2042 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testResult.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testResult.css
@@ -188,6 +188,17 @@
 
 /************************************************************************************************/
 
+.stackFrameLink {
+    color:blue;
+}
+
+.stackFrameLink:hover {
+    cursor:pointer;
+    text-decoration:underline;
+}
+
+/************************************************************************************************/
+
 /* Support for FBTraceConsole */ 
 .DBG_FBTEST {
     color: rgb(255, 165, 0);
