FBTest introduce a new category attribute (allowed values: "passes" (the default value) and "fails"). Tests with this attribute are grayed out in the test console UI and results from these tests are displayed separately.
git-svn-id: http://fbug.googlecode.com/svn@2253 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
@@ -46,7 +46,12 @@ body {
     padding-top: 3px;
 }
 
-#progressMessage {
+#todoTests {
     color: gray;
+    padding-top: 3px;
+}
+
+#progressMessage {
+    color: black;
     padding-top: 3px;
 }
