Make "Browse for a new test suite" button more obvious + avoid exception within internationalize method.
git-svn-id: http://fbug.googlecode.com/svn@2271 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
@@ -33,6 +33,14 @@ body {
     -moz-image-region: rect(0px 64px 16px 48px);
 }
 
+#testListPicker {
+    list-style-image: url(chrome://browser/skin/Search-glass.png);
+    -moz-image-region: rect(0px, 16px, 16px, 0px);
+}
+
+#testListPicker:hover {
+  -moz-image-region: rect(0px 32px 16px 16px);
+}
 /************************************************************************************************/
 /* Statusbar */ 
  
