UI Style Tweaks
git-svn-id: http://fbug.googlecode.com/svn@2444 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.1/skin/classic/firediff.css
+++ b/diff/branches/firediff0.1/skin/classic/firediff.css
@@ -1,10 +1,8 @@
-.addedClass, .addedClass *,
-.addedClass:hover {
+.addedClass, .addedClass * {
     background: green;
     color: white;
 }
-.removedClass, .removedClass *,
-.removedClass:hover {
+.removedClass, .removedClass * {
     background: red;
     color: black;
 }
@@ -35,4 +33,24 @@
 .diffDate {
     position: absolute;
     right: 0px;
+}
+.diffSummary {
+    font-weight: bold;
+}
+.diffSource, .diffDate, .diffXPath {
+    color: gray;
+}
+.diffXPath {
+    padding-bottom: 1em;
+}
+
+
+/* Customized Rules for CSS Display. All others reuse the standard CSS styles */
+.cssRuleDiff {
+    position: relative;
+    font-family: Monaco, monospace;
+    color: #000000;
+}
+.cssPropDiff {
+    padding-left: 2em;
 }
