Append time elapsed info for each test.
git-svn-id: http://fbug.googlecode.com/svn@2450 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testList.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testList.css
@@ -91,19 +91,22 @@
 
 .testListCol.testIcon {
     width: 100%;
+    color: gray;
+    padding-top: 1px;
 }
 
 .testListCol .statusIcon {
     margin-right: 4px;
     margin-left: 4px;
-    width: 17px;
-    height: 17px;
+    width: 37px;
+    height: 16px;
     vertical-align: middle;
     background: transparent no-repeat 0 0;
 }
 
 .testListRow.running .statusIcon {
     background-image: url(chrome://firebug/skin/loading_16.gif);
+    background-position: 10px 0px;
 }
 
 /************************************************************************************************/
