--- a/diff/branches/firediff0.2/test/lib/link1.css
+++ b/diff/branches/firediff0.2/test/lib/link1.css
@@ -1,3 +1,16 @@
+@media tv {
+  #div2 {
+    overflow: hidden;
+  }
+}
+
+@media screen {
+  #div2 {
+    overflow: visible;
+  }
+}
+
 #div2 {
   font-weight: bold;
+  color: green;
 }
