Use an icon for Fail Halt.
git-svn-id: http://fbug.googlecode.com/svn@2879 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testConsole.css
@@ -28,6 +28,10 @@ body {
     list-style-image: url("chrome://firebug/skin/trace/clear.png");
 }
 
+#haltOnFailedTest {
+    list-style-image: url("chrome://fbtest/skin/downloadButtons-aero.png");
+    -moz-image-region: rect(0px 48px 16px 32px);
+}
 #refreshList {
     list-style-image: url("chrome://browser/skin/Toolbar-small.png");
     -moz-image-region: rect(0px 64px 16px 48px);
