CSS Snapshot: - Add @media, @import, @charset, and @font-face domplates - Remove @page model (does not appear to be supported by FF)
git-svn-id: http://fbug.googlecode.com/svn@2933 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/skin/classic/firediff.css
+++ b/diff/branches/firediff0.2/skin/classic/firediff.css
@@ -77,11 +77,19 @@
 }
 
 /* Customized Rules for CSS Display. All others reuse the standard CSS styles */
-.cssRuleDiff {
-    position: relative;
-    font-family: Monaco, monospace;
-    color: #000000;
+.cssRuleDiff, .cssMediaRuleDiff {
+  position: relative;
+  margin: 0;
+  padding: 1em 0 0 6px;
+  font-family: Monaco, monospace;
+  color: #000000;
 }
-.cssPropDiff {
+.cssRuleDiff:first-child, .cssMediaRuleDiff:first-child {
+    padding-top: 6px;
+ }
+.cssMediaRuleDiff .cssRuleDiff:first-child {
+    padding-top: 0px;
+ }
+.cssPropDiff, .cssMediaRuleContent {
     padding-left: 2em;
 }
