--- a/diff/branches/firediff0.2/test/event/applyRevertTest.css
+++ b/diff/branches/firediff0.2/test/event/applyRevertTest.css
@@ -29,3 +29,49 @@
   margin-left: 10px;
   display: block;
 }
+
+.removeRule {
+  display: block;
+}
+
+.insertRuleVerify {
+  display: inline;
+}
+
+@media screen, tv {
+  .setTest {
+    padding-left: 10px;
+    padding-top: 5px;
+  }
+  
+  .setTestVerify {
+    padding-left: 10px;
+    padding-top: 5px;
+    overflow: hidden;
+  }
+  
+  .resetTest {
+    padding-left: 10px;
+    padding-top: 5px;
+  }
+  
+  .resetTestVerify {
+    padding-left: 10px;
+    padding-top: 16px !important;
+  }
+  
+  .removeTest {
+    margin-left: 10px;
+    display: block;
+    margin-right: 40px;
+  }
+  
+  .removeTestVerify {
+    margin-left: 10px;
+    display: block;
+  }
+  
+  .removeRule {
+    display: block;
+  }
+}
