Inside Out HTML Snapshot
git-svn-id: http://fbug.googlecode.com/svn@3105 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/skin/classic/firediff.css
+++ b/diff/branches/firediff0.2/skin/classic/firediff.css
@@ -34,6 +34,14 @@
   display: inline;
 }
 
+.firebugDiff div.nodeChildBox,
+.firebugDiff div.nodeCloseLabel,
+.appDiff div.nodeChildBox,
+.appDiff div.nodeCloseLabel {
+    display: none;
+}
+
+
 .showFirebugChanges .firebugDiff .addedClass,
 .showFirebugChanges .firebugDiff.addedClass,
 .showAppChanges .appDiff .addedClass,
@@ -51,8 +59,11 @@
 
 .addedClass *,
 .removedClass * {
-  background: inherit;
   color: inherit;
+}
+
+.nodeContainerLabel {
+  cursor: pointer;
 }
 
 .diffSep {
