--- a/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
@@ -7,25 +7,23 @@
 #cbContextList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
-     font-weight: bold;
-     color: blue;
 }
-
 
 #cbPackageList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
-     font-weight: bold;
-     color: blue;
 }
 
 #cbAllFilesList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
-     font-weight: bold;
-     color: blue;
 }
 
+#cbContextList > .toolbarbutton-text.label,
+#cbPackageList > .toolbarbutton-text.label,
+#cbAllFilesList > .toolbarbutton-text.label {
+    font-weight: bold;
+}
 
 #cbGlobalScopeList {
     /* This triggers initialize() calls , see bindings.xml */
