DOM Snapshot: - Fix missing changes - Display removed elements contents - Display proper highlight on change elements
git-svn-id: http://fbug.googlecode.com/svn@3330 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/skin/classic/firediff.css
+++ b/diff/branches/firediff0.2/skin/classic/firediff.css
@@ -57,6 +57,28 @@
   color: black;
 }
 
+/* Ugh: There has to be a better way... */
+.showFirebugChanges .jumpHighlight.firebugDiff .addedClass,
+.showFirebugChanges .jumpHighlight.firebugDiff.addedClass,
+.showFirebugChanges .jumpHighlight .firebugDiff .addedClass,
+.showFirebugChanges .jumpHighlight .firebugDiff.addedClass,
+.showAppChanges .jumpHighlight.appDiff .addedClass,
+.showAppChanges .jumpHighlight.appDiff.addedClass,
+.showAppChanges .jumpHighlight .appDiff .addedClass,
+.showAppChanges .jumpHighlight .appDiff.addedClass {
+  background: #66FF66;
+}
+.showFirebugChanges .jumpHighlight.firebugDiff .removedClass,
+.showFirebugChanges .jumpHighlight.firebugDiff.removedClass,
+.showFirebugChanges .jumpHighlight .firebugDiff .removedClass,
+.showFirebugChanges .jumpHighlight .firebugDiff.removedClass,
+.showAppChanges .jumpHighlight.appDiff .removedClass,
+.showAppChanges .jumpHighlight.appDiff.removedClass,
+.showAppChanges .jumpHighlight .appDiff .removedClass,
+.showAppChanges .jumpHighlight .appDiff.removedClass {
+  background: salmon;
+}
+
 .addedClass *,
 .removedClass * {
   color: inherit;
@@ -103,4 +125,10 @@
  }
 .cssPropDiff, .cssMediaRuleContent {
     padding-left: 2em;
+}
+
+.nodeBox.textNodeBox.open > .nodeChildBox {
+  display: inline;
+  margin-left: 0px;
+  padding-left: 0px;
 }
