Better formating of black/white list console logging.
git-svn-id: http://fbug.googlecode.com/svn@3691 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/firestarter/branches/firestarter0.1/chrome/skin/classic/fireStarter.css
+++ b/firestarter/branches/firestarter0.1/chrome/skin/classic/fireStarter.css
@@ -1,5 +1,10 @@
 /* See license.txt for terms of usage */
 
+/* Logging into the Console panel */
+.fireStarter-lists {
+    
+}
+
 /* Support for FBTraceConsole */ 
 .DBG_STARTER {
     color: rgb(61, 106, 0);
