First stab at breaking out the test-case server external to httpd.js, (for FF3.6 testing)
git-svn-id: http://fbug.googlecode.com/svn@3777 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/content/bindings.css
+++ b/fbtest/branches/fbtest1.5/content/bindings.css
@@ -3,3 +3,7 @@
 #testListUrlBar {
     -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
 }
+
+#testSourceUrlBar {
+    -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
+}
