--- a/fbtest/branches/fbtest1.5/skin/classic/testConsole.css
+++ b/fbtest/branches/fbtest1.5/skin/classic/testConsole.css
@@ -41,7 +41,9 @@ body {
 /************************************************************************************************/
 /* Test List URL Bar */
 
-.testUrlBar textbox {
+/* Use IDs as the selector so, the height attribute is applied. Class selector doesn't work */
+#testListUrlBar textbox,
+#testSourceUrlBar textbox {
     height: 20px;
     border: 1px solid gray;
 }
