Show test driver URL in the Test Console UI.
git-svn-id: http://fbug.googlecode.com/svn@4027 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/content/bindings.css
+++ b/fbtest/branches/fbtest1.5/content/bindings.css
@@ -7,3 +7,7 @@
 #testSourceUrlBar {
     -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
 }
+
+#testDriverUrlBar {
+    -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
+}
