Clen up naming.
git-svn-id: http://fbug.googlecode.com/svn@4028 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/content/bindings.css
+++ b/fbtest/branches/fbtest1.5/content/bindings.css
@@ -4,7 +4,7 @@
     -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
 }
 
-#testSourceUrlBar {
+#testCaseUrlBar {
     -moz-binding: url("chrome://fbtest/content/bindings.xml#urlbar");
 }
 
