Make easier to create test setup file (no need for testList element, style sheet, doc type, namespace, title).
git-svn-id: http://fbug.googlecode.com/svn@4031 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/skin/classic/testResult.css
+++ b/fbtest/branches/fbtest1.5/skin/classic/testResult.css
@@ -25,6 +25,7 @@
     overflow: hidden;
     min-width: 70px;
     padding: 1px 0 2px 18px !important;
+    font-size: 11px;
 }
 
 .opened > .testResultCol > .testResultMessage {
@@ -132,11 +133,16 @@
     padding: 5px 0 5px 10px;
 }
 
+.testResultStackInfoBody {
+    font-size: 11px;
+}
+
 /************************************************************************************************/
 
 /* Styles for Compare tab */
 .testResultCompareInfoBody {
     width: 100%;
+    font-size: 11px;
 }
 
 .testResultCompareTitle > TD {
