--- a/jsdoc/jsdoc-toolkit-2.3.0/templates/firebug/class.tmpl
+++ b/jsdoc/jsdoc-toolkit-2.3.0/templates/firebug/class.tmpl
@@ -1,53 +1,54 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset={+IO.encoding+}" />
-		<meta name="generator" content="JsDoc Toolkit" />
-		{! Link.base = "../"; /* all generated links will be relative to this */ !}
-		<title>Firebug API Reference - {+data.alias+}</title>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset={+IO.encoding+}" />
+        <meta name="generator" content="JsDoc Toolkit" />
+        {! Link.base = "../"; /* all generated links will be relative to this */ !}
+        <title>Firebug API Reference - {+data.alias+}</title>
 
-		<style type="text/css">
-			{+include("static/default.css")+}
-		</style>
+        <style type="text/css">
+        {+include("static/default.css")+}
+        </style>
 	</head>
 
 <body>
     <div id="container">
 <!-- ============================== header ================================= -->	
-		<!-- begin static/header.html -->
-		{+include("static/header.html")+}
-		<!-- end static/header.html -->
+        <!-- begin static/header.html -->
+        {+include("static/header.html")+}
+        <!-- end static/header.html -->
 
 <!-- ============================== classes index ============================ -->
-		<div id="index">
-			<!-- begin publish.classesIndex -->
-			{+publish.classesIndex+}
-			<!-- end publish.classesIndex -->
-		</div>
-		
-		<div id="content">
+        <div id="index">
+            <!-- begin publish.classesIndex -->
+            {+publish.classesIndex+}
+            <!-- end publish.classesIndex -->
+        </div>
+
+        <div id="content">
+            <a class="reportIssue" href="http://code.google.com/p/fbug/issues/entry?template=API Reference Report">Report a doc issue</a>
 <!-- ============================== class title ============================ -->
-			<h1 class="classTitle">
-				{!
-					var classType = "";
-					
-					if (data.isBuiltin()) {
-						classType += "Built-In ";
-					}
-					
-					if (data.isNamespace) {
-						if (data.is('FUNCTION')) {
-							classType += "Function ";
-						}
-						classType += "Namespace ";
-					}
-					else {
-						classType += "Class ";
-					}
-				!}
-				{+classType+}{+data.alias+}
-			</h1>
+            <h1 class="classTitle">
+                {!
+                    var classType = "";
+
+                    if (data.isBuiltin()) {
+                        classType += "Built-In ";
+                    }
+
+                    if (data.isNamespace) {
+                        if (data.is('FUNCTION')) {
+                            classType += "Function ";
+                        }
+                        classType += "Namespace ";
+                    }
+                    else {
+                        classType += "Class ";
+                    }
+                !}
+                {+classType+}{+data.alias+}
+            </h1>
 
 <!-- ============================== class summary ========================== -->			
             <if test="data.version"><br />Version
@@ -56,24 +57,23 @@
             <if test="data.dialog"><br />
                    {+ data.dialog +}<br />
             </if>
-			<p class="description">
-				<if test="data.augments.length"><br />Extends
-					{+
-						data.augments
-						.sort()
-						.map(
-							function($) { return new Link().toSymbol($); }
-						)
-						.join(", ")
-					+}.<br />
-				</if>
-			
-				{+resolveLinks(data.classDesc)+}
-				
-				<if test="!data.isBuiltin()">{# isn't defined in any file #}
-					<br /><i>Defined in: </i> {+new Link().toSrc(data.srcFile)+}.
-				</if>
-			</p>
+            <p class="description">
+                <if test="data.augments.length"><br />Extends
+                    {+
+                        data.augments
+                        .sort()
+                        .map(
+                            function($) { return new Link().toSymbol($); }
+                        )
+                        .join(", ")
+                    +}.<br />
+                </if>
+                {+resolveLinks(data.classDesc)+}
+
+                <if test="!data.isBuiltin()">{# isn't defined in any file #}
+                    <br /><i>Defined in: </i> {+new Link().toSrc(data.srcFile)+}.
+                </if>
+            </p>
 
 <!-- ============================== constructor summary ==================== -->			
 			<if test="!data.isBuiltin() && (data.isNamespace || data.is('CONSTRUCTOR'))">
