--- a/jsdoc/jsdoc-toolkit-2.3.0/templates/firebug/static/default.css
+++ b/jsdoc/jsdoc-toolkit-2.3.0/templates/firebug/static/default.css
@@ -41,24 +41,24 @@ body {
 h1
 {
     color: #444444;
-	font-size: 30px;
-	font-weight: bold;
-	padding: 0;
-	margin: 1em 0 0 .3em;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0;
+    margin: 1em 0 0 .3em;
 }
 
 hr
 {
-	border: none 0;
-	border-top: 1px solid #7F8FB1;
-	height: 1px;
+    border: none 0;
+    border-top: 1px solid #7F8FB1;
+    height: 1px;
 }
 
 pre.code
 {
-	display: block;
-	padding: 8px;
-	border: 1px dashed #ccc;
+    display: block;
+    padding: 8px;
+    border: 1px dashed #ccc;
 }
 
 a {
@@ -70,43 +70,48 @@ a {
 
 /* cllClasses.tmpl */
 .allClassesMenu {
-    
+}
+
+/************************************************************************************************/
+
+.reportIssue {
+    margin-left: 480px;
 }
 
 /************************************************************************************************/
 
 .classList
 {
-	list-style-type: none;
-	padding: 0;
-	margin: 0 0 0 8px;
-	font-family: arial, sans-serif;
-	font-size: 1em;
-	overflow: auto;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 0 0 8px;
+    font-family: arial, sans-serif;
+    font-size: 1em;
+    overflow: auto;
 }
 
 .classList li
 {
-	padding: 0;
-	margin: 0 0 8px 0;
+    padding: 0;
+    margin: 0 0 8px 0;
 }
 
 .summaryTable { width: 100%; }
 
 h1.classTitle
 {
-	line-height:130%;
+    line-height:130%;
 }
 
 h2 { font-size: 110%; }
 caption, div.sectionTitle
 {
-	background-color: #7F8FB1;
-	color: #fff;
-	font-size:130%;
-	text-align: left;
-	padding: 2px 6px 2px 6px;
-	border: 1px #7F8FB1 solid;
+    background-color: #7F8FB1;
+    color: #fff;
+    font-size:130%;
+    text-align: left;
+    padding: 2px 6px 2px 6px;
+    border: 1px #7F8FB1 solid;
 }
 
 div.sectionTitle { margin-bottom: 8px; }
@@ -114,72 +119,72 @@ div.sectionTitle { margin-bottom: 8px; }
 
 .summaryTable td
 {
-	vertical-align: top;
-	padding: 4px;
-	border-bottom: 1px #7F8FB1 solid;
-	border-right: 1px #7F8FB1 solid;
+    vertical-align: top;
+    padding: 4px;
+    border-bottom: 1px #7F8FB1 solid;
+    border-right: 1px #7F8FB1 solid;
 }
 
 /*col#summaryAttributes {}*/
 .summaryTable td.attributes
 {
-	border-left: 1px #7F8FB1 solid;
-	width: 140px;
-	text-align: right;
+    border-left: 1px #7F8FB1 solid;
+    width: 140px;
+    text-align: right;
 }
 
 td.attributes, .fixedFont
 {
-	line-height: 15px;
-	color: #002EBE;
-	font-family: "Courier New",Courier,monospace;
-	font-size: 13px;
+    line-height: 15px;
+    color: #002EBE;
+    font-family: "Courier New",Courier,monospace;
+    font-size: 13px;
 }
 
 .summaryTable td.nameDescription
 {
-	text-align: left;
-	font-size: 13px;
-	line-height: 15px;
+    text-align: left;
+    font-size: 13px;
+    line-height: 15px;
 }
 
 .summaryTable td.nameDescription, .description
 {
-	line-height: 15px;
-	padding: 4px;
-	padding-left: 4px;
+    line-height: 15px;
+    padding: 4px;
+    padding-left: 4px;
 }
 
 .summaryTable { margin-bottom: 8px; }
 
 ul.inheritsList
 {
-	list-style: square;
-	margin-left: 20px;
-	padding-left: 0;
+    list-style: square;
+    margin-left: 20px;
+    padding-left: 0;
 }
 
 .detailList {
-	margin-left: 20px; 
-	line-height: 15px;
+    margin-left: 20px; 
+    line-height: 15px;
 }
 .detailList dt { margin-left: 20px; }
 
 .detailList .heading
 {
-	font-weight: bold;
-	padding-bottom: 6px;
-	margin-left: 0;
+    font-weight: bold;
+    padding-bottom: 6px;
+    margin-left: 0;
 }
 
 .light, td.attributes, .light a:link, .light a:visited
 {
-	color: #777;
-	font-style: italic;
+    color: #777;
+    font-style: italic;
 }
 
 .fineprint
 {
-	text-align: right;
-	font-size: 10px;
+    text-align: right;
+    font-size: 10px;
 }
