highlight any context.stopped == true
git-svn-id: http://fbug.googlecode.com/svn@4832 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
@@ -4,6 +4,15 @@
 @import "chrome://browser/skin/browser.css";
 
 
+/* Lightup the text, eg on the Script tab when stopped on a breakpoint */
+toolbarbutton#cbContextList[highlight="true"] {
+    color: #FF9933;
+}
+
+.fbURLMenuItem[highlight="true"] {
+    color: #FF9933;
+}
+
 #cbContextList {
     /* This triggers initialize() calls , see bindings.xml */
     -moz-binding: url("chrome://firebug/content/bindings.xml#panelFileList");
