FBTest now shows up in Chromebug
git-svn-id: http://fbug.googlecode.com/svn@4862 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
+++ b/chromebug/branches/chromebug1.5/content/ChromeBug/chromebug.css
@@ -5,7 +5,7 @@
 
 
 /* Lightup the text, eg on the Script tab when stopped on a breakpoint */
-toolbarbutton#cbContextList[highlight="true"] {
+#wrapper-cbContextList > label {
     color: #FF9933;
 }
 
